////////////////////////////////////////////////////////////////////////////////
/// @file         ClockSynchronizer.proto
///
/// @author       Michael Catanzaro <michael.catanzaro@mst.edu>
///
/// @description  Declaration of all clock synchronizer message types
///
/// These source code files were created at Missouri University of Science and
/// Technology, and are intended for use in teaching or research. They may be
/// freely copied, modified, and redistributed as long as modified versions are
/// clearly marked as such and this notice is not removed. Neither the authors
/// nor Missouri S&T make any warranty, express or implied, nor assume any legal
/// responsibility for the accuracy, completeness, or usefulness of these files
/// or any information distributed with these files.
///
/// Suggested modifications or questions about these files can be directed to
/// Dr. Bruce McMillin, Department of Computer Science, Missouri University of
/// Science and Technology, Rolla, MO 65409 <ff@mst.edu>.
////////////////////////////////////////////////////////////////////////////////

package freedm.broker;

message ExchangeMessage
{
    required uint32 query = 1;
}

message ExchangeResponseMessage
{
    message TableEntry
    {
        required string uuid = 1;
        required uint32 offset_secs = 2;
        required uint64 offset_fracs = 3;
        required double skew = 4;
        required double weight = 5;
    }

    repeated TableEntry table_entry = 1;
    required uint32 response = 2;
    required string unsynchronized_sendtime = 3;
}

message ClockSynchronizerMessage
{
    optional ExchangeMessage exchange_message = 1;
    optional ExchangeResponseMessage exchange_response_message = 2;
}
